# BanglaVerse

./: README.md  pyproject.toml  requirements.txt
docs/: index.html
scripts/: eval_msrvtt.sh  eval_multivent.sh  generate_msrvtt_asr.sh  generate_msrvtt_noasr.sh  generate_multivent_asr.sh  generate_multivent_noasr.sh  grid_search_data.py  grid_search_eval.py
src/data/: constants.py  frame2video_caption.py  frame_caption.py  query_decomp.py  transcribe_audios.py  utils.py
src/data/data_utils/: text_planner.py  video_planner.py  video_utils.py
src/data/data_utils/speech_planner/: refine_translation.py  transcribe.py  translate.py
src/data/prompts/: contextualized_frame_caption+ASR.jinja  contextualized_frame_caption.jinja  during.jinja  extract_event_info.jinja  extract_spatial_info.jinja  extract_temporal_info.jinja  frame_caption+ASR.jinja  frame_caption.jinja  prequel.jinja  refine_event_query.jinja  refine_translation.jinja  sequel.jinja  summary_video_caption+ASR.jinja  summary_video_caption.jinja
src/eval/: evaluation.py  fusion_score.py  infer.py  text_embedder.py  utils.py
src/eval/InternVideo2/: config.py  criterions.py  internvid2.py  model.py  utils.py  vision_embedder.py  xbert.py  xbert_tokenizer.py
src/eval/MultiCLIP/: vision_embedder.py
